tui/tests/snapshots/snapshot_tests__create_session_prompt.snap
---
source: tests/snapshot_tests.rs
expression: "render_to_string(&mut app, 80, 24)"
---
TestBackend { buffer: Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        " Flutter  │  Agent  │  Interactions  │  Treetest_app │ @app-one │ pid 12345     ",
        "┌ Flutter [1/0] ───────────────────────────────────────────────────────────────┐",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│               ┌ Create Session ──────────────────────────────┐               │",
        "│               │Session name:                                 │               │",
        "│               │> my-new-session█                             │               │",
        "│               └──────────────────────────────────────────────┘               │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
        "Enter:create Esc:cancel                                                         ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 0, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 66, y: 0, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 12, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 16, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}, scrollback: Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 0 }
}, cursor: false, pos: (0, 0) }
